# go2x_example_ws

./: .env  .gitignore  2_1_ros_python_example.py  README.md  go2_state_viewer.py  key_config.yaml  pyproject.toml  setup_netif.sh  webrtc_basic.py  webrtc_move_example.py  webrtc_qr_example.py
2_2_webrtc_example/: webrtc_qr_example.py
9_1_find_code_keyboard/: main.py
config/: unitree_params.yaml
go2_libs/: key_config.yaml  keyboard_handler.py  move_keyboard.py  qrcode.py  state_monitor.py  terminal_keyboard.py  webrtc_unitree_ros.py
go2_webrtc_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
launch/: color_track_basic.py  qrgame_launch.py  unitree_launch.py
src/: README.md
src/gesture_ctrl/: package.xml  setup.cfg  setup.py
src/gesture_ctrl/gesture_ctrl/: __init__.py  finger_utils.py  gesture_node.py  pose_utils.py
src/gesture_ctrl/launch/: gesture_ctrl.launch.py
src/gesture_ctrl/scripts/: hand_test.py  pose_test.py  webcam_test.py
src/image_agent/: COCO_CLASSES.md  package.xml  setup.cfg  setup.py
src/image_agent/image_agent/: object_tracking_node.md  object_tracking_node.py  object_yolo_node.py  person_crop_node.py  person_yolo_node.py  rtsp_image_node.py
src/image_agent/launch/: object_tracking_node.launch.py  object_yolo_node.launch.py  person_crop_node.launch.py  person_yolo_node.launch.py  rtsp_image_node.launch.py
src/image_agent/scripts/: download_yolo_model.py
src/llm_robot_agent/: package.xml  setup.cfg  setup.py
src/llm_robot_agent/launch/: llm_robot_agent.launch.py
src/llm_robot_agent/llm_robot_agent/: input_publisher.py  llm_interface_node.py  mcp_server_node.py  robot_control_node.py
src/sdk2_app/: package.xml  setup.cfg  setup.py
src/voice_agent/: package.xml  setup.cfg  setup.py
src/voice_agent/launch/: voice_robot_node.launch.py
src/voice_agent/voice_agent/: audio_test.py  command_parser.py  requirements.txt  stt_module.py  tts_module.py  voice_robot_node.py  wakeword_detector.py
src/webrtc_app/: package.xml  setup.cfg  setup.py
src/webrtc_app/launch/: color_track_basic.py  qrgame_launch.py
src/webrtc_app/src/webrtc_app/: __init__.py
src/webrtc_app/webrtc_app/: color_block_tracker.py  color_block_visualizer.py  webrtc_ros_qrgame.py
src/webrtc_common/: package.xml  setup.cfg  setup.py
src/webrtc_common/config/: unitree_params.yaml
src/webrtc_common/launch/: keyboard_handler_launch.py  terminal_keyboard_launch.py  unitree_launch.py
src/webrtc_common/models/: setup.sh
src/webrtc_common/webrtc_common/: keyboard_conv.py  keyboard_handler.py  terminal_keyboard.py  webcam.py  webrtc_unitree_ros.py
src/webrtc_common/webrtc_common.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/webrtc_noros/: webrtc_basic.py  webrtc_move_example.py  webrtc_qr_example.py
