[project]
name = "go2-webrtc-example"
version = "0.1.0"
description = "Unitree Go2 WebRTC Example"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "setuptools==58.2.0",
    "opencv-contrib-python>=4.8.0",
    "numpy<2",
    "aiortc",
    "pyzbar",
    "unitree-webrtc-connect @ git+https://github.com/legion1581/unitree_webrtc_connect.git",
    "unitree_sdk2py @ git+https://github.com/unitreerobotics/unitree_sdk2_python.git",
    "pynput",
    "PyYAML",
    "janus",
    "ollama",
    "mcp",
    "asyncio",
    "pydantic",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "edge-tts>=6.1.0",
    "pygame>=2.5.0",
    "webrtcvad>=2.0.10",
    "mediapipe>=0.10",
    "onnxruntime<2.0.0",
    "ultralytics",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.setuptools]

[tool.setuptools.package-dir]
# 현재 디렉토리(.) 아래의 폴더들을 패키지로 등록합니다.
"" = "."

[tool.uv.sources]
unitree_webrtc_connect = { path = "../unitree_webrtc_connect", editable = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"